--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
   </div>
 
   <div class="container">
-    <h2>Google Sheet Leaderboard</h2>
-    https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkqT2awIhI8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false</iframe>
-  </div>
+  <h2>Google Sheet Leaderboard</h2>
+  <iframe src="https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkq3-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false
+</div>
 
   <script>
     const questions = [
@@ -235,3 +235,4 @@
   </script>
 </body>
 </html>
+
