--- a/index.html
+++ b/index.html
@@ -98,8 +98,11 @@
 
   <div class="container">
   <h2>Google Sheet Leaderboard</h2>
-  <iframe src="https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkq3-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false
-</div>
+  <iframe 
+    src="https://docs.google.com/spreadsheets/d/15EObAvl_JESL0UpWmMHWwkqT2awIh8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false" 
+    width="100%" 
+    height="400" 
+   
 
   <script>
     const questions = [
@@ -235,4 +238,5 @@
   </script>
 </body>
 </html>
+
 
