--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <div class="container">
     <h2>Google Sheet Leaderboard</h2>
-    https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkqT2awIhI8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false</iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkqT2awIhI8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false" width="100%" height="400" frameborder="0"></iframe>
   </div>
 
   <script>
