Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
   </div>
 
   <div class="container">
-    <h2>Google Sheet Leaderboard</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkqT2awIhI8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false" width="100%" height="400" frameborder="0"></iframe>
-  </div>
-
+  <h2>Google Sheet Leaderboard</h2>
+  <iframe 
+    src="https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkqT2awIhI8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false" 
+    width="100%" 
+    height="400" 
+   
   <script>
     const questions = [
       ["What is the largest planet in our solar system?", ["Earth", "Mars", "Jupiter", "Saturn"], "Jupiter"],
@@ -235,3 +237,4 @@
   </script>
 </body>
 </html>
+
