Fix HTML structure and update leaderboard iframe

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
   <div class="container">
   <h2>Google Sheet Leaderboard</h2>
   <iframe 
-    src="https://docs.google.com/spreadsheets/d/15EQbAvl_iESL0UpWhMHvHwkqT2awIhI8KW0243-WD_A/pubhtml?gid=0&single=true&widget=true&headers=false" 
-    width="100%" 
-    height="400" 
+    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRe_Y2SYPUNa_5IJ0BwE75jhEWfsw2mtzO_OgltzZ5y4t2oAQVcEmc8xopPCoIyXxDX_FE37zS4tOfV/pubhtml?gle=true
+  </iframe>
+</div>
    
   <script>
     const questions = [
@@ -237,4 +237,5 @@
   </script>
 </body>
 </html>
+
 
