--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
 
   <div class="container">
   <h2>Google Sheet Leaderboard</h2>
- <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRe_Y2SYPUNa_5IJ0BwE75jhEWfsw2mtzO_OgltzZ5y4t2oAQVcEmc8xopPCoIyXxDX_FE37zS4tOfV/pubhtml?gid=2050428237&single=true" width="100%" height="400" frame
+  <iframe 
+    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRe_Y2SYPUNa_5IJ0BwE75jhEWfsw2mtzO_OgltzZ5y4t2oAQVcEmc8xopPCoIyXxDX_FE37zS4tOfV/pubhtml?gid=2050428237&single=true" 
+    width="100%" 
+    height="400
 </div>
    
   <script>
@@ -235,6 +238,7 @@
   </script>
 </body>
 </html>
+
 
 
 
