--- a/index.html
+++ b/index.html
@@ -97,14 +97,11 @@
   </div>
 
   <div class="container">
-    <h2>Google Sheet Leaderboard</h2>
-    <iframe 
-      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRe_Y2SYPUNa_5IJ0BwE75jhEWfsw2mtzO_OgltzZ5y4t2oAQVcEmc8xopPCoIyXxDX_FE37zS4tOfV/pubhtml?gid=2050428237&single=true" 
-      width="100%" 
-      height="400" 
-      frameborder="0">
-    </iframe>
-  </div>
+  <h2>Google Sheet Leaderboard</h2>
+  <iframe 
+    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRe_Y2SYPUNa_5IJ0BwE75jhEWfsw2mtzO_OgltzZ5y4t2oAQVcEmc8xopPCV/pubhtml?gid=2050428237&single=true
+  </iframe>
+</div>
 
   <script>
     const questions = [
